@startuml RedditClone_Database

!define PK(x) <b><color:#8B4513>x</color></b>
!define FK(x) <color:#555555>x</color>
skinparam backgroundColor #ffffff
skinparam class {
    BackgroundColor #ffffff
    BorderColor #999999
    FontColor #333333
    AttributeFontColor #333333
}

skinparam linetype ortho
skinparam ArrowColor #666666

'
' ========================= USER =========================
'
entity "User" as User {
    PK(_id) : ObjectId
    --
    username : String <<unique>>
    email : String <<unique>>
    passwordHash : String
    avatar : String
    bio : String
    displayName : String
    bannerColor : String
    bannerUrl : String
    karma : Number
    createdAt : Date
    updatedAt : Date

    -- Preferences --
    allowFollowers : Boolean
    showOnlineStatus : Boolean
    allowDirectMessages : Boolean
    showInSearchResults : Boolean
    showNSFW : Boolean
    blurNSFW : Boolean
    autoplayMedia : Boolean
    reduceMotion : Boolean
    showRecommendations : Boolean
    emailNotifications : Boolean
    commentReplyNotifications : Boolean
    mentionNotifications : Boolean
    upvoteNotifications : Boolean
    newFollowerNotifications : Boolean
    chatMessageNotifications : Boolean
}

'
' ========================= COMMUNITY =========================
'
entity "Community" as Community {
    PK(_id) : ObjectId
    --
    name : String <<unique>>
    title : String
    description : String
    icon : String
    banner : String
    FK(createdBy) : ObjectId
    membersCount : Number
    isPrivate : Boolean
    rules : String[]
    interests : String[]
    createdAt : Date
}

entity "CommunityMember" as CommunityMember {
    PK(_id) : ObjectId
    --
    FK(user) : ObjectId
    FK(community) : ObjectId
    role : String <<member|moderator|owner>>
    createdAt : Date
}

entity "JoinRequest" as JoinRequest {
    PK(_id) : ObjectId
    --
    FK(user) : ObjectId
    FK(community) : ObjectId
    status : String <<pending|approved|rejected>>
    message : String
    reviewedBy : ObjectId
    reviewedAt : Date
    createdAt : Date
}

'
' ========================= POSTS =========================
'
entity "Post" as Post {
    PK(_id) : ObjectId
    --
    title : String
    body : String
    FK(author) : ObjectId
    FK(community) : ObjectId
    url : String
    images : String[]
    videoUrl : String
    processing : Boolean
    score : Number
    commentsCount : Number
    createdAt : Date
    updatedAt : Date
}

entity "HiddenPost" as HiddenPost {
    PK(_id) : ObjectId
    --
    FK(user) : ObjectId
    FK(post) : ObjectId
    createdAt : Date
    updatedAt : Date
}

entity "SavedPost" as SavedPost {
    PK(_id) : ObjectId
    --
    FK(user) : ObjectId
    FK(post) : ObjectId
    createdAt : Date
}

'
' ========================= COMMENTS =========================
'
entity "Comment" as Comment {
    PK(_id) : ObjectId
    --
    FK(post) : ObjectId
    FK(author) : ObjectId
    body : String
    images : String[]
    parent : ObjectId
    score : Number
    createdAt : Date
}

entity "SavedComment" as SavedComment {
    PK(_id) : ObjectId
    --
    FK(user) : ObjectId
    FK(comment) : ObjectId
    createdAt : Date
}

entity "CommentVote" as CommentVote {
    PK(_id) : ObjectId
    --
    FK(user) : ObjectId
    FK(comment) : ObjectId
    value : Number <<1|-1>>
    createdAt : Date
}

'
' ========================= VOTING =========================
'
entity "Vote" as Vote {
    PK(_id) : ObjectId
    --
    FK(user) : ObjectId
    FK(post) : ObjectId
    value : Number <<1|-1>>
    createdAt : Date
}

'
' ========================= SOCIAL =========================
'
entity "Follow" as Follow {
    PK(_id) : ObjectId
    --
    FK(follower) : ObjectId
    FK(following) : ObjectId
    createdAt : Date
}

'
' ========================= MESSAGING =========================
'
entity "Message" as Message {
    PK(_id) : ObjectId
    --
    FK(sender) : ObjectId
    FK(receiver) : ObjectId
    content : String
    read : Boolean
    createdAt : Date
}

'
' ========================= NOTIFICATIONS =========================
'
entity "Notification" as Notification {
    PK(_id) : ObjectId
    --
    FK(user) : ObjectId
    type : String <<reply|vote|message|community_invite|follow>>
    FK(sourceUser) : ObjectId
    FK(sourcePost) : ObjectId
    FK(sourceComment) : ObjectId
    FK(sourceCommunity) : ObjectId
    read : Boolean
    createdAt : Date
}

' ========================= RELATIONSHIPS =========================

' --- User relationships ---
User ||--o{ Post : "writes"
User ||--o{ Comment : "comments"
User ||--o{ Vote : "votes on posts"
User ||--o{ CommentVote : "votes on comments"
User ||--o{ SavedPost : "saves"
User ||--o{ SavedComment : "saves"
User ||--o{ HiddenPost : "hides"
User ||--o{ Follow : "follows"
User ||--o{ Message : "sends/receives"
User ||--o{ Notification : "receives"
User ||--o{ CommunityMember : "belongs to"
User ||--o{ JoinRequest : "requests join"
User ||--o{ Community : "creates"

Community ||--o{ Post : "contains"
Community ||--o{ CommunityMember : "membership"
Community ||--o{ JoinRequest : "receives join requests"

Post ||--o{ Comment : "has"
Post ||--o{ Vote : "receives votes"
Post ||--o{ SavedPost : "can be saved"
Post ||--o{ HiddenPost : "can be hidden"

Comment ||--o{ Comment : "replies"
Comment ||--o{ CommentVote : "receives votes"
Comment ||--o{ SavedComment : "can be saved"

@enduml
